[package]
name = "diesel_logger"
version = "0.3.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
description = "Times and logs queries executed by diesel"
exclude = ["tests/*"]
homepage = "https://github.com/shssoichiro/diesel-logger"
license = "MIT"
repository = "https://github.com/shssoichiro/diesel-logger"
edition = "2021"

[badges]
maintenance = { status = "as-is" }

[dependencies]
async-trait = "0.1.72"
diesel = { version = "2.1", features = [
    "r2d2",
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }
diesel-async = { version = "0.3.2", features = [ "postgres", "mobc"] }
log = "0.4.18"
tokio = { version = "1.0", features = ["full"] }
futures-util = { version = "0.3.17", default-features = false, features = ["std", "sink"] }
